target/debug/build/crossbeam-utils-f81f360ab5b88267/stderr
error[E0658]: use of unstable library feature 'integer_atomics'
 --> <anon>:1:18
  |
1 | pub type Probe = core::sync::atomic::AtomicU128;
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: for more information, see https://github.com/rust-lang/rust/issues/32976

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
